--- a/styles/header.css
+++ b/styles/header.css
@@ -1,1 +1,41 @@
-css file for header
+*{
+    padding : 0px;
+    margin : 0px;
+
+}
+
+header {
+    width : 100%;
+    height: 100vh;
+    display : flex;
+    justify-content: center;
+    margin : 0%;
+    
+}
+
+#logo_romaheader {
+    width : 150px;
+    height : 150px;
+ }
+
+#header_background{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(5,20,1,0.6) 0%, rgba(5,20,1,0.6) 100%);
+
+}
+
+#background_video {
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+    background: linear-gradient(180deg, rgba(5,20,1,0.6) 0%, rgba(5,20,1,0.6) 100%);
+    
+}
+
