--- a/styles/footer.css
+++ b/styles/footer.css
@@ -8,6 +8,7 @@ footer{
 }
 
 footer .top-section{
+    margin-top: 50px;
     display:flex;
     flex-direction:row;
     justify-content:space-between;
