--- a/styles/treatments.css
+++ b/styles/treatments.css
@@ -33,6 +33,11 @@ h4{
     flex-direction: column;
 }
 
+.card{
+    display: flex;
+    flex-direction: row;
+}
+
 .left-side{
     display: flex;
     flex-direction: column;
@@ -44,8 +49,6 @@ h4{
     display: flex;
     flex-direction: row;
     align-items: center;
-    column-gap: 2em;
-    width: 40%;
     height: 30px;
 }
 
