--- a/styles/products.css
+++ b/styles/products.css
@@ -1,1 +1,68 @@
 
+main{
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+header{
+    background-image: url('/assets/images/treatments/facial-massage.png');
+    width:100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 70vh;
+}
+
+.special-offer{
+    background-image: url("/assets/images/products/mother-day.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 500px;
+}
+
+h2{
+    color : #B89535;
+}
+
+h3{
+    color : white;
+    background-color: #004B62;
+    padding: 0.3em;
+}
+
+h4{
+    padding: 0;
+    margin: 0;
+}
+
+.card{
+    background-color: white;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    transform: translateY(150px);
+}
+
+.product-list{
+    display: flex;
+    flex-direction: column;
+}
+
+.product-list img{
+    width: 240px;
+    object-fit: contain;
+}
+
+.product-list div{
+    width: 240px;
+}
+
+button{
+    background-color: transparent;
+    color: #B89535;
+    border: 1px solid #B89535;
+    margin: 0;
+    padding: 5px;
+}
