problem with account.html

--- a/styles/account.css
+++ b/styles/account.css
@@ -33,18 +33,21 @@ header{
     flex-direction: column;
 }
 
+.selected-products .empty-cart{
+    display: block;
+}
+
 .selected-products .full-cart{
     display: none;
 }
 
-.reserve-inactive{
+
+#reserve-inactive{
     display: block;
 }
-
-.reserve-active{
+#reserve-active{
     display: none;
 }
-
 
 
 button{
@@ -52,6 +55,8 @@ button{
     color: #B89535;
     border: 1px solid #B89535;
     margin: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 5px;
 }
 
@@ -60,5 +65,17 @@ button:hover{
     color: white;
     border: 1px solid white;
     margin: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 5px;
+}
+
+button a{
+    text-decoration: none;
+    color: #B89535;
+}
+
+button a:hover{
+    text-decoration: none;
+    color: white;
 }
