--- a/styles/products.css
+++ b/styles/products.css
@@ -19,7 +19,7 @@ header{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 500px;
+    height: 300px;
 }
 
 h2{
@@ -33,8 +33,10 @@ h3{
 }
 
 h4{
-    padding: 0;
+    padding: 3px;
     margin: 0;
+    background-color: #B89535;
+    color: white;
 }
 
 .card{
@@ -42,27 +44,61 @@ h4{
     width: 150px;
     display: flex;
     flex-direction: column;
-    transform: translateY(150px);
+    float:right;
+    transform: translateX(48px);
+    text-align: center;
+    box-shadow: 2px 2px 5px palegoldenrod;
+}
+
+.card p{
+    width: auto;
 }
 
 .product-list{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 20px;
+    justify-content: space-evenly;
 }
 
 .product-list img{
-    width: 240px;
+    width: 170px;
     object-fit: contain;
 }
 
+.product-list img:hover{
+    width: 170px;
+    object-fit: contain;
+    box-shadow: 2px 2px 5px gray;
+    transform: scale(1.3);
+}
+
 .product-list div{
-    width: 240px;
+    width: 170px;
+    padding: 12px;
+  
+    text-align: center;
+    font-size: 0.8em;
+  
 }
 
 button{
     background-color: transparent;
     color: #B89535;
-    border: 1px solid #B89535;
     margin: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 5px;
+    border: 1px solid #B89535;
+}
+
+button:hover{
+    background-color: #B89535;
+    color: white;
+    margin: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 5px;
+    border: 1px solid #B89535;
 }
