--- a/styles/account.css
+++ b/styles/account.css
@@ -13,12 +13,7 @@ main{
     width: 70%;
     margin-left: auto;
     margin-right: auto;
-}
-
-.tabs{
-    margin-top: 20px;
-    text-align: center;
-    background-color: #B89535;
+    padding-bottom: 30px;
 }
 
 header{
@@ -28,6 +23,19 @@ header{
     background-size: cover;
     background-position: center;
     height: 40vh;
+}
+
+.tabs{
+    margin-top: 20px;
+    text-align: center;
+    background-color: #B89535;
+    display: flex;
+    justify-content: space-around;
+}
+
+.account-info{
+   padding-left: 15px;
+   padding-right: 15px;
 }
 
 .selected-products{
