--- a/styles/log-in.css
+++ b/styles/log-in.css
@@ -1,4 +1,10 @@
-
+header{
+    background-image: url('/assets/images/backgrounds/pool-snow-mountains.jpeg');
+    height: 50vh;
+    background-position: bottom;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
 .card{
     width: 70%;
@@ -8,7 +14,6 @@
     display: flex;
     flex-direction: row;
     column-gap: 30px;
-    border: 1px solid lightgoldenrodyellow;
 }
 
 .log-in{
