--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: fedra;
+    src: url("../assets/fonts/FedraSansBook.ttf");
+}
+
 *{
     padding : 0px;
     margin : 0px;
@@ -8,17 +13,24 @@ header {
     width : 100%;
     height: 100vh;
     display : flex;
-    justify-content: center;
-    margin : 0%;
-    
+}
+
+#div_logo_romaheader{
+    width : 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #logo_romaheader {
-    width : 200px;
-    height : 200px;
+    width : 175px;
+    height : 175px;
+    margin : 1em 0 1em 0;
+    animation : elementApparition 5s;
+
  }
 
-#background_video {
+#background_image {
     height: 100vh;
     width: 100vw;
     object-fit: cover;
@@ -28,5 +40,195 @@ header {
     top: 0;
     bottom: 0;
     z-index: -1;
+    animation: backgroundHeader 10s;
 }
+
+#menu {
+    width : 20%;
+}
+
+.header svg {
+    width : 50px;
+    height: 50px;
+    margin : 5em 0em 0em 5em;
+    color: white;
+}
+
+.icon_header {
+    margin : 5em 5em 0 0;
+    display: flex;
+}
+
+#user_profil {
+    width : 40px;
+    height: 40px;
+    margin-right: 5em;
+    
+}
+
+.buy_list {
+    width : 40px;
+    height: 40px;
+    margin : 0;
+}
+
+
+
+#div_border_line {
+    border-top: 1px solid white;
+    width: 80%;
+    z-index: 3;
+    opacity : 50%;
+
+}
+
+.title-header {
+    margin-top : 15em;
+    margin-left: 5em;
+    color: white;
+    position : Absolute;
+    font-size : 40px;
+    font-family: fedra;
+    animation: spaRoma 5s;
+}
+
+@keyframes elementApparition {
+    from {
+        opacity: 0%;
+        transform : translateY(-400px);
+    } to {
+        transform: translateY(0);
+        opacity: 100%;
+    }
+}
+
+@keyframes spaRoma {
+    from {
+        transform : translateX(-400px);
+        opacity: 0%;
+    } to {
+        transform: translateX(0);
+        opacity: 100%;
+    }
+}
+
+@keyframes backgroundHeader {
+    from {
+    
+        width : 125%;
+    } to {
+       width: 100%;
+    }
+}
+
+
+
+
+/*------------Menu bg------------*/
+
+
+
+svg {
+  width : 50px;
+  height: 50px;
+  margin : 5em 0 0 5em;
+  cursor : pointer;
+  transition: 0.4s transform linear;
+}
+
+svg:hover {
+  transform : rotate(10deg);
+}
+
+
+
+.mobile-overlay{
+    position:fixed;
+    top:0;
+    left:0;
+    width : 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,4);
+    display : none;
+    z-index : 1;
+}
+
+.mobile-overlay-active {
+    display : block   
+}
+
+.nav-mobile{
+    position : fixed;
+    top : 0;
+    z-index : 2;
+    right: 0;
+    width : 100vw;
+    height: 100vh;
+    background-color: black;
+    opacity : 80%;
+    transform: translateY(-100%);
+    transition: 1s;
+}
+
+.nav-mobile.active{
+    transform: initial;
+}
+
+.nav-mobile_menu {
+    padding: 0;
+    margin: 0;
+    list-style : none;
+}
+
+.nav-mobile_menu li{
+    margin-bottom: 50px;
+}
+
+.nav-mobile_menu li a{
+    color: white;
+    text-decoration : none;
+    font-size: 30px;
+    position: relative;
+}
+
+.nav-mobile_menu li a:after {
+    content: '';
+    height: 1px;
+    width: 0px;
+    background-color: white;
+    position : absolute;
+    bottom : -6px;
+    right : 0;
+    transition : 0.7s width  ease-out;
+}
+
+.nav-mobile_menu li a:hover:after {
+    width: 100%;
+    left: 0;
+}
+
+.nav-mobile_close {
+    width : 50px;
+    height: 50px;
+    cursor : pointer;
+    z-index: 3;
+}
+
+.menu_a {
+    width : 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: fedra;
+    font-size: 15px;
+}
+
+
+/*------------shoppingList-------------*/
+
+
+
+
 
