--- a/styles/contact.css
+++ b/styles/contact.css
@@ -46,7 +46,7 @@ main input {
     padding-bottom: 1em;
     padding-left: 1em;
     margin-bottom: 1em;
-    background-color: #dcddf5;
+    background-color:white;
     border: 1px solid #B89535;
     width: 80%;
 }
@@ -57,13 +57,13 @@ main textarea {
     padding-top: 1em;
     padding-bottom: 4em;
     padding-left: 1em;
-    background-color: #dcddf5;
+    background-color: white;
     border: 1px solid #B89535;
     width: 80%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 ::placeholder {
-
     color: #B89535;
 }
 
@@ -87,7 +87,10 @@ main button:hover, .active {
     border: 1px solid #B89535;
 }
 
-
+main button a{
+    color: white;
+    text-decoration: none;
+}
 
 
 /* responsive design */
