--- a/styles/header.css
+++ b/styles/header.css
@@ -13,6 +13,9 @@ header {
     width : 100%;
     height: 100vh;
     display : flex;
+    background-image: url("/assets/images/backgrounds/background-header.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #div_logo_romaheader{
