new products page

--- a/styles/products.css
+++ b/styles/products.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: "fedra";
+    src: url(../assets/graphic-charter/fonts/Fedra\ Sans\ Book.ttf);
+}
+
+*{
+    margin:0;
+    padding:0;
+}
 
 main{
     width: 70%;
@@ -6,37 +15,55 @@ main{
 }
 
 header{
-    background-image: url('/assets/images/treatments/facial-massage.png');
+    background-image: url('../assets/images/treatments/product-image-head.jpg');
     width:100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     height: 70vh;
+    margin-bottom: 3em;
+    box-shadow:  20px 20px 60px #d9d9d9,
+    -20px -20px 60px #ffffff;
+    box-shadow:  17px 17px 59px #b8b8b8,
+    -17px -17px 59px #ffffff;
+    
 }
 
 .special-offer{
-    background-image: url("/assets/images/products/mother-day.jpg");
-    background-repeat: no-repeat;
-    background-size: 700px;
-    background-position: center;
-    height: 300px;
+    display: flex;
+    justify-content: center;
+    margin: 5em 0 5em 0;
+    
 }
 
-h2{
-    color : #B89535;
+.motherday{
+    width : 100%;
+    border: 5px solid #f3dcde;
+    border-radius: 5px;
+    box-shadow:  20px 20px 60px #d9d9d9,
+             -20px -20px 60px #ffffff;
+
 }
+
+
 
 h3{
-    color : white;
-    background-color: #004B62;
+    color : rgb(0, 0, 0);
     padding: 0.3em;
+    text-align: center;
+    font-family: fedra;
+    font-size: 30px;
 }
 
 h4{
+    font-size: 15px;
     padding: 3px;
     margin: 0;
-    background-color: #B89535;
-    color: white;
+    margin-top:4em;
+    color: rgb(0, 0, 0);
+    font-family: fedra;
+
+    
 }
 
 .card{
@@ -44,21 +71,13 @@ h4{
     width: 150px;
     display: flex;
     flex-direction: column;
-    transform: translate(0, 208px);
-    text-align: center;
+    float:right;
+    transform: translateX(48px);
+    width: 100%;
 }
 
 .card p{
     width: auto;
-}
-#card-title{
-    color: #B89535;
-    margin-bottom: 0px;
-}
-
-#card-baseline{
-    color: #004B62;
-    font-size: 0.7em;
 }
 
 .product-list{
@@ -70,21 +89,15 @@ h4{
 }
 
 .product-list img{
-    width: 170px;
+    width: 247px;
     object-fit: contain;
 }
 
-.product-list img:hover{
-    width: 170px;
-    object-fit: contain;
-    box-shadow: 2px 2px 5px gray;
-    transform: scale(1.3);
-}
+
 
 .product-list div{
-    width: 170px;
+    width: 247px;
     padding: 12px;
-  
     text-align: center;
     font-size: 0.8em;
   
@@ -94,7 +107,7 @@ button{
     background-color: transparent;
     color: #B89535;
     margin: 0;
-    margin-top: 10px;
+    margin-top: 40px;
     margin-bottom: 10px;
     padding: 5px;
     border: 1px solid #B89535;
@@ -104,8 +117,62 @@ button:hover{
     background-color: #B89535;
     color: white;
     margin: 0;
-    margin-top: 10px;
+    margin-top: 40px;
     margin-bottom: 10px;
     padding: 5px;
     border: 1px solid #B89535;
+}
+
+.productDescription{
+    font-family: fedra;
+    font-size: 15px;
+}
+
+.product-select{
+    margin-bottom : 10em;
+}
+
+/*--------------------*/
+
+.product:hover {
+    background-color: rgba(58, 1, 132, 0.44);
+    box-shadow: 0 0 1px #000;
+    border-radius: 5px;
+    
+}
+
+.product:hover img{
+    opacity:10%;
+}
+
+.divDescription{
+    position: absolute;
+    margin-top: -140px;
+    margin-left: -10px;;
+    opacity: 0;
+
+
+}
+
+.product:hover .divDescription {
+    transform: translateY(0px);
+    transition-delay: 0.1s;
+    opacity: 1;
+    font-family: fedra;
+    font-size: 12px;
+    animation: divDescription 1s;
+}
+
+
+
+
+
+@keyframes divDescription{
+    from {
+        transform : translateY(20px);
+        opacity: 0%;
+    } to {
+        transform: translateY(0);
+        opacity: 100%;
+    }
 }
