--- a/styles/products.css
+++ b/styles/products.css
@@ -42,17 +42,18 @@ header{
     border-radius: 5px;
     box-shadow:  20px 20px 60px #d9d9d9,
              -20px -20px 60px #ffffff;
-
 }
 
 
 
 h3{
-    color : rgb(0, 0, 0);
     padding: 0.3em;
     text-align: center;
     font-family: fedra;
     font-size: 30px;
+    color: #B89535;
+    margin: 0;
+    margin-bottom: 20px;
 }
 
 h4{
@@ -62,8 +63,6 @@ h4{
     margin-top:4em;
     color: rgb(0, 0, 0);
     font-family: fedra;
-
-    
 }
 
 .card{
@@ -92,8 +91,6 @@ h4{
     width: 247px;
     object-fit: contain;
 }
-
-
 
 .product-list div{
     width: 247px;
@@ -135,10 +132,9 @@ button:hover{
 /*--------------------*/
 
 .product:hover {
-    background-color: rgba(58, 1, 132, 0.44);
+    background-color: #3faba3;
     box-shadow: 0 0 1px #000;
     border-radius: 5px;
-    
 }
 
 .product:hover img{
@@ -150,8 +146,6 @@ button:hover{
     margin-top: -140px;
     margin-left: -10px;;
     opacity: 0;
-
-
 }
 
 .product:hover .divDescription {
@@ -162,10 +156,6 @@ button:hover{
     font-size: 12px;
     animation: divDescription 1s;
 }
-
-
-
-
 
 @keyframes divDescription{
     from {
