--- a/styles/footer.css
+++ b/styles/footer.css
@@ -6,6 +6,7 @@ footer{
     margin-left: auto;
     color: #A8743F;
     border-top: 1px solid #A8743F;
+    background-color: white;
 }
 
 footer .top-section{
