--- a/styles/header.css
+++ b/styles/header.css
@@ -1,21 +1,17 @@
 @font-face {
     font-family: fedra;
-    src: url("../assets/fonts/FedraSansBook.ttf");
+    src: url("../assets/graphic-charter/fonts/FedraSansBook.ttf");
 }
 
 *{
     padding : 0px;
     margin : 0px;
-
 }
 
 header {
     width : 100%;
     height: 100vh;
     display : flex;
-    background-image: url("/assets/images/backgrounds/background-header.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 #div_logo_romaheader{
@@ -30,7 +26,6 @@ header {
     height : 175px;
     margin : 1em 0 1em 0;
     animation : elementApparition 5s;
-
  }
 
 #background_image {
@@ -50,7 +45,7 @@ header {
     width : 20%;
 }
 
-.header svg {
+header svg {
     width : 50px;
     height: 50px;
     margin : 5em 0em 0em 5em;
@@ -66,7 +61,6 @@ header {
     width : 40px;
     height: 40px;
     margin-right: 5em;
-    
 }
 
 .buy_list {
@@ -75,14 +69,11 @@ header {
     margin : 0;
 }
 
-
-
 #div_border_line {
     border-top: 1px solid white;
     width: 80%;
     z-index: 3;
     opacity : 50%;
-
 }
 
 .title-header {
@@ -124,12 +115,7 @@ header {
     }
 }
 
-
-
-
 /*------------Menu bg------------*/
-
-
 
 svg {
   width : 50px;
@@ -142,8 +128,6 @@ svg {
 svg:hover {
   transform : rotate(10deg);
 }
-
-
 
 .mobile-overlay{
     position:fixed;
@@ -228,10 +212,4 @@ svg:hover {
     font-size: 15px;
 }
 
-
 /*------------shoppingList-------------*/
-
-
-
-
-
