--- a/styles/header.css
+++ b/styles/header.css
@@ -9,18 +9,27 @@
 }
 
 header {
-    width : 100%;
     height: 100vh;
     display : flex;
+    background-image: url("../assets/images/backgrounds/background-header.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
+.header_mobile{
+    width: 15%;
+}
+
+
+/* white logo centered */
 #div_logo_romaheader{
-    width : 100%;
+    width : 70%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+/* logo entering page with animation */
 #logo_romaheader {
     width : 175px;
     height : 175px;
@@ -30,13 +39,7 @@ header {
 
 #background_image {
     height: 100vh;
-    width: 100vw;
     object-fit: cover;
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
     z-index: -1;
     animation: backgroundHeader 10s;
 }
@@ -45,6 +48,7 @@ header {
     width : 20%;
 }
 
+/* hamburger menu svg */
 header svg {
     width : 50px;
     height: 50px;
@@ -52,7 +56,9 @@ header svg {
     color: white;
 }
 
+/* right div with two icons : user and cart*/
 .icon_header {
+    width: 15%;
     margin : 5em 5em 0 0;
     display: flex;
 }
@@ -76,14 +82,23 @@ header svg {
     opacity : 50%;
 }
 
+/* main header title */
 .title-header {
-    margin-top : 15em;
-    margin-left: 5em;
+    margin-top : 40%;
+    margin-left: 15%;
     color: white;
     position : Absolute;
-    font-size : 40px;
-    font-family: fedra;
     animation: spaRoma 5s;
+}
+
+.title-header h1{
+    font-size : 400%;
+    font-family: fedra;
+    padding : 0px;
+}
+
+.title-header h2{
+    padding:0px;
 }
 
 @keyframes elementApparition {
